MODUSERSKC-83: Search users in all tenants when using "Forgot password" and "Forgot username" links (#158)
(cherry picked from commit 658e878346429de8c1959eecaa5b3a3063653555)